// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignDrillItemsAndType should assign attribute header type to header and attribute and attribute value to drillItems 1`] = `
Array [
  Object {
    "attributeHeaderItem": Object {
      "name": "CompuSci",
      "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    },
  },
  Object {
    "attributeHeader": Object {
      "formOf": Object {
        "identifier": "attr.product.id",
        "name": "Product",
        "ref": Object {
          "uri": "/gdc/md/referenceworkspace/obj/1054",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "identifier": "label.product.id.name",
      "localIdentifier": "a_label.product.id.name",
      "name": "Product Name",
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1055",
    },
  },
]
`;

exports[`assignDrillItemsAndType should assign measure header item drillItems and type to header 1`] = `
Array [
  Object {
    "measureHeaderItem": Object {
      "format": "$#,##0.00",
      "identifier": "aangOxLSeztu",
      "localIdentifier": "m_aangOxLSeztu",
      "name": "Amount",
      "ref": Object {
        "uri": "/gdc/md/referenceworkspace/obj/1271",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1271",
    },
  },
]
`;

exports[`getDrillIntersection should return intersection of all column header attributes and values and a measure for column header cell 1`] = `
Array [
  Object {
    "header": Object {
      "attributeHeader": Object {
        "formOf": Object {
          "identifier": "attr.owner.region",
          "name": "Region",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1086",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1086",
        },
        "identifier": "label.owner.region",
        "localIdentifier": "a_label.owner.region",
        "name": "Region",
        "ref": Object {
          "uri": "/gdc/md/referenceworkspace/obj/1087",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1087",
      },
      "attributeHeaderItem": Object {
        "name": "West Coast",
        "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460489",
      },
    },
  },
  Object {
    "header": Object {
      "measureHeaderItem": Object {
        "format": "$#,##0.00",
        "identifier": "aangOxLSeztu",
        "localIdentifier": "m_aangOxLSeztu",
        "name": "Amount",
        "ref": Object {
          "uri": "/gdc/md/referenceworkspace/obj/1271",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1271",
      },
    },
  },
]
`;

exports[`getDrillIntersection should return intersection of row attribute and row attribute value for row header cell 1`] = `
Array [
  Object {
    "header": Object {
      "attributeHeader": Object {
        "formOf": Object {
          "identifier": "attr.product.id",
          "name": "Product",
          "ref": Object {
            "uri": "/gdc/md/referenceworkspace/obj/1054",
          },
          "uri": "/gdc/md/referenceworkspace/obj/1054",
        },
        "identifier": "label.product.id.name",
        "localIdentifier": "a_label.product.id.name",
        "name": "Product Name",
        "ref": Object {
          "uri": "/gdc/md/referenceworkspace/obj/1055",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "attributeHeaderItem": Object {
        "name": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
    },
  },
]
`;

exports[`getDrillRowData should return an array of row data 1`] = `
Array [
  Object {
    "id": "165678",
    "name": "CompuSci",
  },
  "5099309.54",
  "22123590.1",
]
`;

exports[`getMeasureDrillItem should return measure drill item based on response headers 1`] = `
Object {
  "measureHeaderItem": Object {
    "format": "$#,##0.00",
    "identifier": "aangOxLSeztu",
    "localIdentifier": "m_aangOxLSeztu",
    "name": "Amount",
    "ref": Object {
      "uri": "/gdc/md/referenceworkspace/obj/1271",
    },
    "uri": "/gdc/md/referenceworkspace/obj/1271",
  },
}
`;
